client/src/stylesheets/css/main.css
/* ... */
.recipe-buttons {
  padding-top: 2rem; }

.up-edit-button {
  font-family: Peleguer, serif;
  color: black;
  font-size: 2rem;
  padding: 0.5rem 2rem 0 2rem;
  background-color: transparent;
  border: 0.25px solid #e1dedc;
  border-radius: 0; }

.up-edit-button:hover {
  border-radius: 0;
  background-color: #1E401D;
  border: none; }

.up-delete-button {
  font-family: Peleguer, serif;
  color: black;
  margin-left: 2rem;
  font-size: 2rem;
  padding: 0.5rem 2rem 0 2rem;
  background-color: transparent;
  border: 0.25px solid #e1dedc;
  border-radius: 0; }

.up-delete-button:hover {
  border-radius: 0; }

.up-toggle-button {
  font-family: Peleguer, serif;
  color: black;
  margin-left: 2rem;
  font-size: 2rem;
  padding: 0.5rem 2rem 0 2rem;
  background-color: transparent;
  border: 0.25px solid #e1dedc;
  border-radius: 0; }

.up-toggle-button:hover {
  background-color: #1E401D;
  border: none; }

.manual-add-btn {
  font-family: LeagueGothic, sans-serif;
  font-size: 2rem;
  letter-spacing: 0.25rem;
  color: white;
  background-color: #90bb5e;
  border-radius: 0;
  margin-top: 3%;
  padding-left: 3rem;
  padding-right: 3rem; }

.manual-add-btn:hover {
  background-color: #1E401D; }

* {
  outline: 0px !important;
  -webkit-appearance: none; }

.recipe-header {
  font-family: LeagueGothic, sans-serif;
  background-color: #e1dedc;
  margin-top: 3%;
  padding: 3rem 2rem 7rem 9vw; }

.recipe-title {
  font-family: LeagueGothic, sans-serif;
  color: #E44125;
  font-size: 6rem;
  letter-spacing: 0.3rem;
  text-transform: uppercase; }

.recipe-servingsize {
  font-family: PeleguerItalic, serif;
  font-size: 3rem; }

.recipe-subtitle {
  font-family: LeagueGothic, sans-serif;
  font-size: 5rem;
  letter-spacing: 0.5rem;
  color: #F99E1C;
  margin-left: 9vw;
  margin-top: 3%;
  margin-bottom: 2%; }

.ingredientChecklist {
  width: 80%;
  margin-left: 7%;
  border: none;
  color: black;
  font-family: Peleguer, serif;
  font-size: 2.9rem;
  background-color: transparent;
  border: none;
  padding: 0; }

.glyphicon {
  font-size: 2.5rem; }

.instructionChecklist {
  font-family: Peleguer, serif;
  font-size: 2.9rem;
  background-color: transparent;
  border: none;
  width: 80%;
  margin-left: 8%;
  margin-top: -0.5%; }

.tags {
  font-family: Peleguer, serif;
  font-size: 3.4rem;
  color: gray;
  margin: 2% 8% 1% 9%;
  width: 100%; }

.recipe-link-box {
  margin: 1.2% 8% 1% 9%;
  width: 100%; }

.recipe-link {
  font-family: Peleguer, serif;
  font-size: 2.5rem;
  color: black;
  text-decoration: none; }

.recipe-notes-panel {
  border: 4px solid #F99E1C;
  border-radius: 0;
  width: 40%;
  margin-left: 9vw;
  margin-top: 2%; }

.panel-header {
  color: white;
  font-size: 4rem;
  letter-spacing: 0.5rem;
  background-color: #F99E1C;
  border: 2px solid #F99E1C;
  height: 100%;
  width: 100%;
  padding: 2rem 1rem 2rem 1.5rem;
  margin-top: 0; }

.recipe-notes {
  font-family: PeleguerItalic, serif;
  font-size: 2.5rem;
  padding-left: 1rem; }

.note-input {
  font-family: Peleguer, serif;
  font-size: 2rem;
  width: 100%; }

.panel-header {
  font-family: LeagueGothic, sans-serif; }

.recipepage-btns {
  margin-left: 8vw; }

.recipepage-btn {
  font-family: LeagueGothic, sans-serif;
  font-size: 2rem;
  letter-spacing: 0.2rem;
  color: #f4f0ed;
  background-color: #E44125;
  border-radius: 0;
  padding: 0.5rem 4rem 0.5rem 4rem;
  margin-top: 2rem;
  margin-right: 7rem;
  margin-bottom: 4rem; }

.recipepage-btn:hover {
  background-color: #1E401D; }

.editrecipe-container {
  width: 80%;
  margin-left: 10%;
  margin-top: 4%; }

.recipe-page-col {
  background-color: transparent;
  border: none; }

.ERTitle {
  font-family: LeagueGothic, sans-serif;
  color: black;
  font-size: 3rem;
  letter-spacing: 0.2rem; }

.ERAdd {
  font-family: LeagueGothic, sans-serif;
  color: gray;
  font-size: 2rem;
  letter-spacing: 0.35rem;
  margin-top: 4rem; }

.ER-row {
  margin-top: 1.2%; }

.ERSubmit {
  font-family: LeagueGothic, sans-serif;
  font-size: 2.25rem;
  letter-spacing: 0.31rem;
  color: #f4f0ed;
  background-color: #F99E1C;
  border: none;
  border-radius: 0;
  padding: 0.4rem 1.2rem 0.4rem 1.2rem;
  margin-top: 0.2rem;
  margin-left: 3rem; }

.ERSubmit:hover {
  background-color: #E44125; }

.ERSave {
  padding-right: 2rem;
  padding-left: 2rem; }

.ERSave:hover {
  background-color: #1E401D; }

.ERInput {
  font-family: Peleguer, serif;
  font-size: 2.3rem;
  width: 100%;
  height: 4.2rem;
  box-shadow: none;
  border: 0.5px solid #e1dedc;
  padding-left: 2.4rem; }

.drop-down {
  font-size: 0.75vw;
  text-align: center;
  width: 100%;
  padding: 0.75vw 2rem 0.75vw 2rem;
  border: 0.5px solid #e1dedc;
  border-radius: 0;
  background-color: transparent; }

.ingredient-btn {
  font-family: LeagueGothic, sans-serif;
  font-size: 1vw;
  letter-spacing: 0.2rem;
  color: #f4f0ed;
  background-color: #E44125;
  border-radius: 0;
  margin-top: 3%;
  padding-left: 3rem;
  padding-right: 3rem; }

.ingredient-btn:hover {
  background-color: #1E401D; }

.recipeDelete {
  margin-left: 3%; }

.recipeComplete {
  margin-left: 3%; }

.recipe-add-button {
  font-family: LeagueGothic, sans-serif;
  font-size: 2rem;
  letter-spacing: 0.2rem;
  color: white;
  background-color: #E44125;
  border-radius: 0;
  margin-top: 2%;
  margin-left: -1.1rem;
  padding-left: 3rem;
  padding-right: 3rem; }

.recipe-add-button:hover {
  background-color: #1E401D; }
/* ... */

